--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,4 +20,10 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     -->
+
+    <!-- annotációval ezt vajon be lehet állítani? -->
+    <!-- ez (elvileg) a request és session scoped spring komponensekhez kell -->
+    <listener>
+        <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+    </listener>
 </web-app>
